--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+g.rv-xy-plot__grid-lines {
+    stroke: gray;
+    stroke-width: 1;
+}
